kubernetes-ops/eventual-hub/components/backend/deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend-app
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: localhost:5001/eventual-hub-backend:latest
        ports:
        - containerPort: 8000
          name: backend-port
        volumeMounts:
          - mountPath: /var/run/secrets/certs/tls
            name: tls-cert
      volumes:
        - name: tls-cert
          secret:
            secretName: backend-hub-service-cert
