kubernetes-ops/eventual-hub/components/backend/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend-app
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: backend
        ports:
        - containerPort: 8000
          name: backend-port
        volumeMounts:
          - mountPath: /var/run/secrets/certs/tls
            name: tls-cert
          - mountPath: /etc/eventual/kuberay
            name: kuberay-client-config
      volumes:
        - name: tls-cert
          secret:
            secretName: backend-hub-service-cert
        - name: kuberay-client-config
          configMap:
            name: kuberay-client-config
      serviceAccountName: backend-sa
