kubernetes-ops/eventual-hub/components/backend/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: backend
  ports:
  - port: 8000
